# engos

./: .gitignore  Cargo.toml
src/: anthropic.rs  capabilities.rs  config.rs  help.rs  lib.rs  main.rs  mainmenu.rs  menu.rs  models.rs  neworch.rs  newproject.rs  newreport.rs  options.rs  project.rs  projectmenu.rs  report.rs  reportmenu.rs  theme.rs  tui.rs  watcher.rs  workspace.rs
tests/: cli.rs  config.rs  help.rs  menu.rs  watcher.rs
